<resources>
    <string name="app_name">Chaskify</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_search">Search</string>
    <string name="action_notification">Notifications</string>
    <string name="action_profile">Perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_on_duty">On Duty</string>
    <string name="action_off_duty">Off duty</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_preference_account">Account</string>
    <string name="title_preference_profile">Profile</string>
    <string name="title_preference">Settings</string>
    <string name="title_preference_notifications">Notifications</string>
    <string name="title_preference_enable_push">Push notifications</string>
    <string name="title_preference_notification_sound">Sound</string>
    <string name="title_preference_language">Language</string>
    <string name="key_preference_enable_push">key_preference_enable_push</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="action_clear_all">Clear all</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Enter email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="action_forget_password">Forgot password?</string>
    <string name="title_activity_settings_profile">Profile</string>
    <string name="title_preference_team">Team</string>
    <string name="title_preference_personal">Personal</string>
    <string name="title_preference_email">Email</string>
    <string name="title_preference_contact">Contact</string>
    <string name="title_preference_vehicle">Vehicle</string>
    <string name="title_preference_vehicle_type">Type</string>
    <string name="title_preference_vehicle_description">Description</string>
    <string name="title_preference_vehicle_license_plate">License Plate</string>
    <string name="title_preference_vehicle_color">Color</string>
    <string name="title_preference_change_password">Change Password</string>
    <string name="title_preference_logout">Logout</string>
    <string name="title_activity_settings_vehicle">Vehicle</string>
    <string name="key_preference_profile">key_preference_profile</string>
    <string name="key_preference_driver_vehicle">key_preference_vehicle</string>
    <string name="key_preference">key_preference</string>
    <string name="large_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum ex id impedit itaque maxime quo unde! Alias commodi dicta ea impedit, natus nesciunt nulla placeat quisquam, recusandae sequi vel voluptatum.
</string>
    <string name="title_task_description">Task description</string>
    <string name="title_task_history">Task history</string>
    <string name="action_task_filter_status">Status</string>
    <string name="action_task_filter_type">Type</string>
    <string name="title_task_waypoint_description">Waypoint description</string>
    <string name="title_task">Task</string>
    <string name="title_way_point">Waypoint</string>
    <string name="key_preference_team_name">key_preference_team_name</string>
    <string name="key_preference_driver_mail">key_preference_driver_mail</string>
    <string name="key_preference_driver_phone">key_preference_driver_phone</string>
    <string name="action_logout">Logout</string>
    <string name="action_change_password">Change password</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="vehicle_type">
        <item>Truck</item>
        <item>Car</item>
        <item>Bike</item>
        <item>Bicycle</item>
        <item>Scooter</item>
        <item>Walk</item>
    </string-array>

    <string-array name="vehicle_type_values">
        <item>truck</item>
        <item>car</item>
        <item>bike</item>
        <item>bicycle</item>
        <item>scooter</item>
        <item>walk</item>
    </string-array>


    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="prompt_current_password">Current password</string>
    <string name="prompt_new_password">New password</string>
    <string name="prompt_confirm_new_password">Confirm password</string>
    <string name="key_preference_vehicle_type">key_vehicle_type</string>
    <string name="key_preference_vehicle_description">key_vehicle_description</string>
    <string name="key_preference_vehicle_license">key_preference_vehicle_license</string>
    <string name="key_preference_vehicle_color">key_preference_vehicle_color</string>
    <string name="error_password_not_match">The new password not match with the confirm</string>
    <string name="title_init_session">Touch for init session</string>
    <string name="title_input_password">Input your password</string>
    <string name="key_preference_notifications_sound">key_preference_notifications_sound</string>
    <string name="error_not_internet_connection">Not connected to internet</string>
    <string name="action_retry">Try again</string>
    <string name="action_remove_account">Remove account from device</string>

    //task actions positive and negative text
    <string name="title_task_accept">accept</string>
    <string name="title_task_decline">decline</string>
    <string name="title_task_start">start</string>
    <string name="title_task_cancel">cancel</string>
    <string name="title_task_arrived">arrived</string>
    <string name="title_task_failed">failed</string>
    <string name="title_task_successful">successful</string>
    <string name="title_task_cancel_reason">Reason</string>
    <string name="title_task_way_point_successful">successful</string>
    <string name="error_failed_to_connect">Error trying to connect to the server</string>
    <string name="error_time_out">Exceeded the waiting time, try again</string>
    <string name="message_change_password_successful">The password was changed correctly</string>
    <string name="key_preference_language">key_preference_language</string>

    <string name="language_default">English</string>
    <string name="sound_default">sound_default</string>
    <string name="title_language_change">Language change</string>
    <string name="message_language_change">To change the language the application must restart. Do you want to do it now?</string>
    <string name="action_positive_change_language">restart</string>
    <string name="action_negative_change_language">later</string>
</resources>
