<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <com.chaskify.android.ui.widget.ProfilePreferenceWidget
        android:key="@string/key_preference_profile"
        android:layout="@layout/widget_profile_preference" />

    <PreferenceCategory android:title="@string/title_preference_personal">

        <Preference
            android:icon="@drawable/ic_mail_black_24dp"
            android:key="@string/key_preference_driver_mail"
            android:summary="amarturelo@gmail.com"
            android:title="@string/title_preference_email" />

        <Preference
            android:icon="@drawable/ic_sms_black_24dp"
            android:key="@string/key_preference_driver_phone"
            android:summary="+5352950107"
            android:title="@string/title_preference_contact" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_preference_vehicle">

        <Preference
            android:key="@string/key_preference_vehicle_type"
            android:summary="Bicycle"
            android:title="@string/title_preference_vehicle_type" />

        <Preference
            android:key="@string/key_preference_vehicle_description"
            android:summary="shimano"
            android:title="@string/title_preference_vehicle_description" />

        <Preference
            android:key="@string/key_preference_vehicle_license"
            android:summary="444"
            android:title="@string/title_preference_vehicle_license_plate" />

        <Preference
            android:key="@string/key_preference_vehicle_color"
            android:summary="blue"
            android:title="@string/title_preference_vehicle_color" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_preference">
        <Preference
            android:summary="default"
            android:title="@string/title_preference_language" />

        <SwitchPreference
            android:key="@string/key_preference_enable_push"
            android:title="@string/title_preference_enable_push" />
        <Preference
            android:dependency="@string/key_preference_enable_push"
            android:summary="ring ring"
            android:title="@string/title_preference_notification_sound" />
    </PreferenceCategory>

</PreferenceScreen>