<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/title_preference_personal">

        <Preference
            android:icon="@drawable/ic_mail_black_24dp"
            android:key="@string/key_preference_driver_mail"
            android:summary="amarturelo@gmail.com"
            android:title="@string/title_preference_email" />

        <Preference
            android:icon="@drawable/ic_sms_black_24dp"
            android:key="@string/key_preference_driver_phone"
            android:summary="+5352950107"
            android:title="@string/title_preference_contact" />

    </PreferenceCategory>

    <Preference
        android:icon="@drawable/ic_bike_black_24dp"
        android:key="@string/key_preference_vehicle"
        android:summary="Bicycle"
        android:title="@string/title_preference_vehicle" />

    <PreferenceCategory android:title="@string/title_preference">
        <Preference
            android:summary="default"
            android:title="@string/title_preference_language" />

        <SwitchPreference
            android:key="@string/key_preference_enable_push"
            android:title="@string/title_preference_enable_push" />
        <Preference
            android:dependency="@string/key_preference_enable_push"
            android:summary="ring ring"
            android:title="@string/title_preference_notification_sound" />
    </PreferenceCategory>

</PreferenceScreen>