<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/title_preference_account">

        <Preference
            android:key="@string/key_preference_profile"
            android:title="@string/title_preference_profile" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_preference_preferences">
        <Preference
            android:summary="default"
            android:title="@string/title_preference_language" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_preference_notifications">
        <SwitchPreference
            android:key="@string/key_preference_enable_push"
            android:title="@string/title_preference_enable_push" />
        <Preference
            android:dependency="@string/key_preference_enable_push"
            android:summary="la ballmesa"
            android:title="@string/title_preference_notification_sound" />
    </PreferenceCategory>

</PreferenceScreen>